# skean

./: LICENSE  README.md  main.py  meson.build  pyproject.toml
.github/workflows/: pythonpackage.yml
skean/: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  setup.cfg  setup.py  tox.ini
skean/.github/: ISSUE_TEMPLATE.md
skean/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
skean/skean/: __init__.py  cli.py  skean.pxd  skean.pyx
skean/tests/: __init__.py  test_skean.py
src/: meson.build  skean.pxd  skean.pyx
tests/: test_skean.py
